--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: #000;
+    font-family: 'PS2P-Regular', Arial, sans-serif;
 }
 
-body {
-    background-color: #000;
+main {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100dvh;
-    font-family: 'PS2P-Regular', Arial, sans-serif;
+    width: 100%;
 }
 
 .panel {
